build: move to Java 25 LTS
Toolchain, CI and the README go from 21 to 25. Two things had to move with it:

- foojay-resolver-convention 0.8.0 -> 1.0.0. The old version crashed on
  Gradle 9.7.1 with `NoSuchFieldError: JvmVendorSpec.IBM_SEMERU`. It only
  surfaced now because Gradle cannot auto-detect the Homebrew JDK and fell
  through to the resolver. With it bumped, Gradle provisions Temurin 25
  itself, so no machine-specific toolchain path is committed.
- org.graalvm.buildtools.native 0.10.2 -> 0.11.0 for JDK 25 support.

Language-level modernisation, limited to changes that carry their weight:

- Unnamed variables (Java 22) for the 13 deliberately-ignored catch
  parameters. `catch (Exception _)` is compiler-enforced; `ignored` was only
  a naming convention the compiler could not check.
- IdleWatcher runs on a virtual thread. Its loop spends essentially all its
  life in sleep(), so pinning a platform thread to it was waste. Virtual
  threads are always daemons, so it still does not hold the JVM open.

The rest of the codebase was already current -- virtual-thread executors in
Server and WebSocketHub, pattern-matching instanceof, sequenced-collection
accessors -- so there was little else worth churning.

The dated plan and spec documents under docs/superpowers/ still say Java 21.
Those are records of what was decided at the time, not current
documentation, so they are deliberately left alone.

Verified: full build and coverage gates pass on 25, the shadow jar is class
file version 69, and the server starts and serves (GET / and /api/files both
200) under Temurin 25.

Claude-Session: https://claude.ai/code/session_01PJCJg8qjxpjuZ8kGhgBasU